syntax = "proto3";

option csharp_namespace = "Discount.Grpc";

service DiscountProtoService{
	rpc GetDiscount (GetDiscountRequest) returns (GetDiscountResponse);

	rpc CreateDiscount (CouponModel) returns (CouponModel);

	rpc UpdateDiscount (CouponModel) returns (CouponModel);

	rpc DeleteDiscount (DeleteRequest) returns (DeleteResponse);

}

message GetDiscountRequest{
	string productName = 1;
}

message GetDiscountResponse{
	string id = 1;
	string productName = 2;
	string description = 3;
	int32 amount = 4;
}

message CouponModel{
	string id = 1;
	string productName = 2;
	string description = 3;
	int32 amount = 4;
}

message DeleteRequest{
	string productName = 1;
}

message DeleteResponse{
	bool Sucess = 1;
}